syntax="proto3";
//
message ThreadDetailRequest {  
 int64 id=1;
}
