syntax="proto3";
//
message ThreadListRequest {  
 int32 samplerInterval=1;
}
